--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!--Easier Homework Assignment 1-->
-
 <!DOCTYPE html>
 <html lang="en-us">
 
@@ -13,43 +12,39 @@
 
 <body>
 
-    <section>
-        <header>
+    <section id="header">
             header
-        </header>
     </section>
   
-    <section>
-        <nav>
+    <section id="nav">
             nav
-        </nav>
-    </section>
-
-    <section id="aside">
-
-            <h5>aside</h5>
-
-    </section>
+    </section>    
 
     <section id="section">
 
-        <h5>section</h5>
+        <h6>section</h6>
 
-        <section id="article">
-            
-            <div id=middle>
-                <h5>article</h5>
-                <h1>h1,h2,h3</h1>
-                <p>p</p>                
-            </div>
-        </section>
+            <section id="article">
+
+                <h6>article</h6>
+
+                <div>
+                    <h5>h1,h2,h3</h5>
+                </div>
+                <div>
+                    <p>p</p>
+                </div>  
+                                   
+            </section>
 
     </section>
 
-    <section>
-        <footer>
+    <section id="aside">
+        <h6>aside</h6>
+    </section>
+
+    <section id="footer">
             footer
-        </footer>
     </section>
 
 </body>
